--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -7,9 +7,6 @@
 	"plugin.inlang.messageFormat": {
 		"pathPattern": "./messages/{locale}.json"
 	},
-	"baseLocale": "en",
-	"locales": [
-		"en",
-		"fr"
-	]
+	"baseLocale": "fr",
+	"locales": ["en", "fr"]
 }
