--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -5,7 +5,7 @@
 		"https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@2/dist/index.js"
 	],
 	"plugin.inlang.messageFormat": {
-		"pathPattern": "./messages/{locale}.json"
+		"pathPattern": "./translations/{locale}.json"
 	},
 	"baseLocale": "fr",
 	"locales": ["en", "fr"]
